<resources>
    <string name="app_name">Muvi</string>
    <string name="poster">Poster</string>
    <string name="detail">Rincian</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="action">Aksi</string>
    <string name="restricted_rate">5/10</string>
    <string name="title">Judul</string>
    <string name="order_isb_processing">Pembelian Sedang Diproses</string>
    <string name="tab_movie">Film</string>
    <string name="tab_tv_show">Serial TV</string>
    <string name="tv_show">Serial TV</string>
    <string name="movie_cinema">Film Bioskop</string>
    <string name="movie">Film</string>
    <string name="order">Beli</string>
    <string name="setting_language">Pengaturan Bahasa</string>
    <string name="main_title">Muvi - Temukan Film Favoritmu</string>
    <string name="null_desc">Sebuah serial TV menarik yang akan membawamu ke dalam cerita yang dalam. Seri ini sudah mencapai season 7 dengan 30 episode di setiap seasonnya</string>
    <string-array name="data_video_movie">
        <item>https://www.youtube.com/watch?v=nSbzyEJ8X9E</item>
        <item>https://www.youtube.com/watch?v=WDkg3h8PCVU</item>
        <item>https://www.youtube.com/watch?v=y0M433RvwZo</item>
        <item>https://www.youtube.com/watch?v=o2AsIXSh2xo</item>
        <item>https://www.youtube.com/watch?v=mP0VHJYFOAU</item>
        <item>https://www.youtube.com/watch?v=lcwmDAYt22k</item>
        <item>https://www.youtube.com/watch?v=ovFpFtZ2Tvk</item>
        <item>https://www.youtube.com/watch?v=ONHBaC-pfsk</item>
        <item>https://www.youtube.com/watch?v=naW9U8MiUY0</item>
        <item>https://www.youtube.com/watch?v=9OoT8KvPPX8</item>
        <item>https://www.youtube.com/watch?v=95ghQs5AmNk</item>
    </string-array>
    <string-array name="data_poster_movie">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_glass</item>
    </string-array>
    <string-array name="data_category_movie">
        <item>Drama</item>
        <item>Aksi | Sci-Fi</item>
        <item>Aksi | Sci-Fi</item>
        <item>Drama | Sci-Fi</item>
        <item>Biografi</item>
        <item>Aksi</item>
        <item>Aksi</item>
        <item>Komedi</item>
        <item>Animasi</item>
        <item>Animasi</item>
        <item>Aksi</item>
    </string-array>
    <string-array name="data_title_movie">
        <item>A Star Is Born</item>
        <item>Aquaman</item>
        <item>Avenger : Infinity War</item>
        <item>Birdbox</item>
        <item>Bohemian Rapsodi</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Deadpool</item>
        <item>How To Train Your Dragon</item>
        <item>Dragon Ball</item>
        <item>Glass</item>
    </string-array>
    <string-array name="data_description_movie">
        <item>Seorang bintang musik country yang karirnya mulai memudar, Jackson Maine (Bradley Cooper) menemukan sebuah talenta yang sangat berbakat di dalam diri dari seorang musisi muda bernama Ally (Lady Gaga). Maine berhasil mengorbitkan Ally menjadi seorang bintang muda yang menjanjikan. Namun keduanya terlibat hubungan yang lebih jauh dari sekedar mentor dan anak didik. Seiring dengan meroketnya karir dari Ally dan dirinya, Maine mengalami dilema mengenai masalah ini.</item>
        <item>Film ini mengungkap asal-usul Arthur Curry, manusia perkasa yang bisa mengendalikan air dan hewan laut. Dari mana ia mendapatkan kekuatannya? Siapa orang tuanya, dan pantaskah dia menjadi seorang raja di 7samudera?</item>
        <item>The Avengers dan sekutu mereka harus bersedia mengorbankan segalanya dalam upaya untuk mengalahkan Thanos yang kuat sebelum ia berhasil menghancurkan alam semesta.</item>
        <item>Malorie Hayes (Sandra Bullock), seorang seniman yang tengah mengandung sedang memeriksakan diri ke dokter bersama kakak perempuannya Jessica (Sarah Paulson). Dalam perjalanan pulang, keduanya melihat terjadi kekacauan di luar hingga banyak orang melakukan bunuh diri. Di saat yang sama, Jessica kemudian terlihat aneh hingga akhirnya bunuh diri di depan mata Malorie.</item>
        <item>Diangkat dari kisah nyata untuk merayakan musik band Rock legendaris QUEEN dan tentunya vokalis mereka yang luar biasa, FREDDIE MERCURY, yang dikenal menentang tradisi dan stereotip hingga menjadi salah satu penghibur yang paling dicintai di planet ini.</item>
        <item>Dalam pelarian di tahun 1987, Bumblebee menemukan perlindungan di tempat rongsokan di sebuah kota kecil pinggir pantai California. Charlie, gadis yang tengah menyentuh usia 18 tahun dan sedang mencari jati diri, menemukan Bumblebee, yang banyak tergores dan rusak. Ketika berusaha memfungsikannya lagi, Charlie menyaksikan sendiri bahwa ini bukanlah mobil VW kodok berwarna kuning yang biasa.</item>
        <item>Creed II akan melanjutkan kisah Adonis Johnson di dalam serta di luar ring saat ia berhadapan dengan ketenaran, masalah keluarga dan misi yang terus berlanjut untuk menjadi juara sejati.</item>
        <item>Prajurit bayaran Wade Wilson, menjalani percobaan untuk menyembuhkan dirinya dari kanker. Ia memperoleh kekuatan dari proses penyembuhan itu, tapi dengan konsekuensi menjadi cacat fisik permanen.</item>
        <item>Seorang Viking muda menentang tradisi ketika ia berteman dengan seekor naga bernama Toothless. Bersama, para pahlawan tidak biasa ini melawan segala rintangan demi menyelamatkan kedua dunia mereka.</item>
        <item>Ini adalah kisah baru dari Bangsa Saiyan. Bumi damai setelah Turnamen Kekuasaan. Menyadari bahwa alam semesta masih memiliki banyak orang yang lebih kuat untuk ditemukan, Goku menghabiskan seluruh harinya berlatih untuk mencapai kemampuan bertarungnya yang lebih baik lagi. Lalu suatu hari, Goku dan Vegeta dihadapkan oleh seorang Saiyan lainnya bernama Broly yang belum pernah mereka lihat sebelumnya.</item>
        <item>Film Glass akan melanjutkan kisah pencarian Kevin Wendell Crumb yang hmelarikan diri setelah menculik para gadis. Kevin Wendel Crumbang memiliki 20 kepribadian dalam satu jiwa ini bisa berubah menjadi seorang monster saat pribadinya yang bernama The Beast muncul.</item>
    </string-array>
    <string-array name="data_rate_movie">
        <item>7/10</item>
        <item>8/10</item>
        <item>8/10</item>
        <item>7/10</item>
        <item>5/10</item>
        <item>7/10</item>
        <item>6/10</item>
        <item>7/10</item>
        <item>9/10</item>
        <item>7/10</item>
        <item>9/10</item>
    </string-array>
    <string-array name="data_restriction_movie">
        <item>18+</item>
        <item>18+</item>
        <item>18+</item>
        <item>12+</item>
        <item>18+</item>
        <item>12+</item>
        <item>17+</item>
        <item>5+</item>
        <item>5+</item>
        <item>5+</item>
        <item>18+</item>
    </string-array>
    <string-array name="data_price_movie">
        <item>Rp40.000</item>
        <item>Rp35.000</item>
        <item>Rp35.000</item>
        <item>Rp35.000</item>
        <item>Rp40.000</item>
        <item>Rp40.000</item>
        <item>Rp35.000</item>
        <item>Rp40.000</item>
        <item>Rp35.000</item>
        <item>Rp40.000</item>
        <item>Rp35.000</item>
    </string-array>
    <string-array name="data_is_promo_movie">
        <item>true</item>
        <item>true</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
        <item>true</item>
        <item>false</item>
    </string-array>
    <string-array name="data_video_tv">
        <item>https://www.youtube.com/watch?v=XQS7JkQmlx8</item>
        <item>https://www.youtube.com/watch?v=6tTM9nbRk5A</item>
        <item>https://www.youtube.com/watch?v=T4_wHfz2qUA</item>
        <item>https://www.youtube.com/watch?v=AtlsjFlcRZ0</item>
        <item>https://www.youtube.com/watch?v=roeWUfVaGsc</item>
        <item>https://www.youtube.com/watch?v=Yj0l7iGKh8g</item>
        <item>https://www.youtube.com/watch?v=rlR4PJn8b8I</item>
        <item>https://www.youtube.com/watch?v=lPe-oYBsbw0</item>
        <item>https://www.youtube.com/watch?v=q1pcpgREQ5c</item>
        <item>https://www.youtube.com/watch?v=u73CLdHpbNk</item>
        <item>https://www.youtube.com/watch?v=f9OKL5no-S0</item>
    </string-array>
    <string-array name="data_poster_tv">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_doom_patrol</item>
        <item>@drawable/poster_dragon_ball</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_gotham</item>
        <item>@drawable/poster_grey_anatomy</item>
        <item>@drawable/poster_hanna</item>
        <item>@drawable/poster_iron_fist</item>
    </string-array>
    <string-array name="data_category_tv">
        <item>Aksi</item>
        <item>Aksi</item>
        <item>Animasi</item>
        <item>Animasi</item>
        <item>Animasi</item>
        <item>Aksi | Sci-Fi</item>
        <item>Aksi</item>
        <item>Aksi</item>
        <item>Drama</item>
        <item>Drama</item>
        <item>Aksi</item>
    </string-array>
    <string-array name="data_title_tv">
        <item>The Arrow</item>
        <item>Doom Patrol</item>
        <item>Dragon Ball</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Gotham</item>
        <item>Grey Anatomy</item>
        <item>Hanna</item>
        <item>Iron Fist</item>
    </string-array>
</resources>