<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="6dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="8dp"
            android:paddingStart="0dp"
            android:background="@android:color/white">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="194dp"
                android:layout_height="0dp"
                android:scaleType="fitStart"
                android:elevation="6dp"
                app:srcCompat="@drawable/poster_avengerinfinity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/poster" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                tools:text="@string/title"
                android:gravity="start"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_poster"
                app:layout_constraintTop_toTopOf="@id/img_poster" />

            <ImageView
                android:id="@+id/img_star_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/ic_star_black_24dp"
                app:layout_constraintTop_toTopOf="@id/tv_restriction"
                app:layout_constraintBottom_toBottomOf="@id/tv_restriction"
                app:layout_constraintStart_toEndOf="@id/img_poster"/>

            <TextView
                android:id="@+id/tv_restriction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp"
                tools:text="@string/restricted_rate"
                android:gravity="start|center_vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintStart_toEndOf="@id/img_star_rate"/>

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="@string/action"
                android:gravity="start"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_restriction"
                app:layout_constraintStart_toStartOf="@id/tv_title"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:maxLines="4"
                android:ellipsize="end"
                tools:text="@string/lorem_ipsum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_category"
                app:layout_constraintStart_toStartOf="@id/tv_title" />

            <Button
                android:id="@+id/btn_detail"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/bg_button"
                android:text="@string/detail"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
